--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -1,6 +1,5 @@
 <.header>
-  Road <%= @road.id %>
-  <:subtitle>This is a road record from your database.</:subtitle>
+  <%= @road.name %>
   <:actions>
     <.link patch={~p"/roads/#{@road}/show/edit"} phx-click={JS.push_focus()}>
       <.button>Edit road</.button>
@@ -9,12 +8,12 @@
 </.header>
 
 <.list>
-  <:item title="Num"><%= @road.num %></:item>
+  <:item title="Road Number"><%= @road.num %></:item>
   <:item title="Name"><%= @road.name %></:item>
   <:item title="Description"><%= @road.description %></:item>
 </.list>
 
-<.back navigate={~p"/roads"}>Back to roads</.back>
+<.back navigate={~p"/"}>Return</.back>
 
 <.modal :if={@live_action == :edit} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road}")}>
   <.live_component
