--- a/lib/engweb_web/components/layouts/root.html.heex
+++ b/lib/engweb_web/components/layouts/root.html.heex
@@ -16,6 +16,17 @@
       <%= if @current_user do %>
         <li>
           <.link
+            href={~p"/users/profile"}
+          >
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/>
+          <circle cx="12" cy="10" r="3"/>
+          <circle cx="12" cy="12" r="10"/>
+          </svg>
+            
+          </.link>
+        </li>
+        <li>
+          <.link
             href={~p"/users/settings"}
           >
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
