--- a/lib/engweb_web/live/user_profile_live.html.heex
+++ b/lib/engweb_web/live/user_profile_live.html.heex
@@ -1,11 +1,26 @@
-<div class="container mx-auto py-6">
-  <h1 class="text-2xl font-bold mb-4">Profile</h1>
-  <div class="mb-4">
-    <label class="block mb-2 font-semibold">Email:</label>
-    <p class="border rounded w-full py-2 px-3"><%= @user.email %></p>
+<div class="flex flex-row space-x-6 mx-auto border rounded-lg py-6 px-4 bg-gray-200">
+  <div class="flex-none pr-5 border-r-2 border-gray-500">
+    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/>
+    <circle cx="12" cy="10" r="3"/>
+    <circle cx="12" cy="12" r="10"/>
+    </svg>
   </div>
-  <div class="mb-4">
-    <label class="block mb-2 font-semibold">Name:</label>
-    <p class="border rounded w-full py-2 px-3"><%= @user.name %></p>
+  <div class="flex-1">
+    <h1 class="text-2xl font-bold mb-4">Profile (<%= @user.role %>)</h1>
+    <div class="mb-4">
+      <label class="block mb-2 font-semibold">Name:</label>
+      <p class="border rounded border-gray-500 w-full py-2 px-3"><%= @user.name %></p>
+    </div>
+    <div class="mb-4">
+      <label class="block mb-2 font-semibold">Email:</label>
+      <p class="border rounded border-gray-500 w-full py-2 px-3"><%= @user.email %></p>
+    </div>
+    <div class="mb-4">
+      <label class="block mb-2 font-semibold">Filiation:</label>
+      <p class="border rounded border-gray-500 w-full py-2 px-3"><%= @user.filiation %></p>
+    </div>
+    <div class="mb-4">
+      <label class="block mb-2 opacity-50">Confirmed  at  <%= @user.confirmed_at %></label>
+    </div>
   </div>
 </div>
