--- a/lib/engweb_web/live/road_live/index.html.heex
+++ b/lib/engweb_web/live/road_live/index.html.heex
@@ -16,23 +16,9 @@
   <:col :let={{_id, road}} label="Number"><%= road.num %></:col>
   <:col :let={{_id, road}} label="Name"><%= road.name %></:col>
   <:col :let={{_id, road}} label="Description"><%= road.description %></:col>
-  <:action :let={{_id, road}}>
-    <div class="sr-only">
-      <.link navigate={~p"/roads/#{road}"}>Show</.link>
-    </div>
-    <.link patch={~p"/roads/#{road}/edit"}>Edit</.link>
-  </:action>
-  <:action :let={{id, road}}>
-    <.link
-      phx-click={JS.push("delete", value: %{id: road.id}) |> hide("##{id}")}
-      data-confirm="Are you sure?"
-    >
-      Delete
-    </.link>
-  </:action>
 </.table>
 
-<.modal :if={@live_action in [:new, :edit]} id="road-modal" show on_cancel={JS.patch(~p"/")}>
+<.modal :if={@live_action == :new} id="road-modal" show on_cancel={JS.patch(~p"/")}>
   <.live_component
     module={EngwebWeb.RoadLive.FormComponent}
     id={@road.id || :new}
