--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -4,6 +4,9 @@
     <.link patch={~p"/roads/#{@road.id}/edit"} phx-click={JS.push_focus()}>
       <.button>Edit road</.button>
     </.link>
+    <.link patch={~p"/roads/#{@road.id}/delete"} phx-click={JS.push_focus()}>
+      <.button>Delete road</.button>
+    </.link>
   </:actions>
 </.header>
 
@@ -57,6 +60,19 @@
     title={@page_title}
     action={@live_action}
     road={@road}
+    current_user={@current_user}
     patch={~p"/roads/#{@road.id}"}
-  />
+    />
+</.modal>
+
+<.modal :if={@live_action == :delete} id="road-modal_delete" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
+  <.live_component
+    module={EngwebWeb.RoadLive.FormComponent}
+    id={@road.id}
+    title={@page_title}
+    action={@live_action}
+    road={@road}
+    current_user={@current_user}
+    patch={~p"/"}
+    />
 </.modal>
