--- a/lib/engweb_web/live/road_live/index.html.heex
+++ b/lib/engweb_web/live/road_live/index.html.heex
@@ -8,6 +8,17 @@
   </.header>
 <% end %>
 
+<form class="flex items-center" phx-submit="search">
+  <label for="query"></label>
+  <input
+    type="text"
+    name="query"
+    id="query"
+    placeholder="Search Road..."
+  />
+  <button type="submit">Search</button>
+</form>
+
 <.table
   id="roads"
   rows={@streams.roads}
