--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -19,13 +19,31 @@
 </.list>
 
 <div style="text-align: center; margin-top: 30px; margin-bottom: 40px;">
-  <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Present Day Images</h2>
+  <div class="items-center">
+    <h2 style="font-size: 24px; font-weight: bold; color: #333; ">Present Day Images</h2>
+    <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") and (Enum.count(@current_images) < @max_current_image_uploads) do %>
+      <.link patch={~p"/roads/#{@road.id}/current_image/new"} phx-click={JS.push_focus()} class="flex justify-end">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-square">
+          <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+          <line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/>
+        </svg>
+      </.link>
+    <% end %>
+  </div>
   <%= if @current_images do %>
     <div class="max-w-screen-xl mx-auto">
       <ul style="list-style-type: none; padding: 0; margin: 0;">
         <%= for image <- @current_images do %>
           <li style="display: inline-block; margin: 0 2vw;">
             <img src={image.image} style="max-width: 25vw; height: auto; display: block; margin: 0 auto 4vw;">
+            <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
+            <.link patch={~p"/roads/#{@road.id}/current_image/#{image.id}/delete"} phx-click={JS.push_focus()} class="flex justify-center mb-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-square">
+                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                <line x1="9" y1="9" x2="15" y2="15"/>
+                <line x1="15" y1="9" x2="9" y2="15"/></svg>                  
+            </.link>
+          <% end %>
           </li>
         <% end %>
       </ul>
@@ -36,7 +54,17 @@
 </div>
 
 <div style="text-align: center; margin-top: 30px; margin-bottom: 40px;">
-  <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Old Images</h2>
+  <div class="items-center">
+    <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Old Images</h2>
+    <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") and (Enum.count(@images) < @max_image_uploads) do %>
+      <.link patch={~p"/roads/#{@road.id}/image/new"} phx-click={JS.push_focus()} class="flex justify-end">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-square">
+          <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+          <line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/>
+        </svg>
+      </.link>
+    <% end %>
+  </div>
   <%= if Enum.empty?(@images) do %>
     <p>No images available.</p>
   <% else %>
@@ -46,6 +74,14 @@
           <div style="text-align: center;">
             <img src={image.image} alt={image.legenda} style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
             <p style="font-weight: bold; margin-bottom: 20px;"><%= image.legenda %></p>
+            <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
+              <.link patch={~p"/roads/#{@road.id}/image/#{image.id}/delete"} phx-click={JS.push_focus()} class="flex justify-center mb-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-square">
+                  <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                  <line x1="9" y1="9" x2="15" y2="15"/>
+                  <line x1="15" y1="9" x2="9" y2="15"/></svg>                  
+              </.link>
+            <% end %>
           </div>
         </li>
       <% end %>
@@ -55,19 +91,25 @@
 
 <.back navigate={~p"/"}>Return</.back>
 
-<.modal :if={@live_action in [:edit, :delete]} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
+<.modal :if={@live_action in [:edit, :delete, :delete_image, :delete_current_image, :new_image, :new_current_image]} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
   <.live_component
     module={EngwebWeb.RoadLive.FormComponent}
-    id={@road.id}
+    id={
+      case @live_action do
+        :delete_current_image -> @current_image
+        :delete_image -> @image
+        _ -> @road.id
+      end
+    }
     title={@page_title}
     action={@live_action}
     road={@road}
     current_user={@current_user}
     patch={
-      if @live_action == :edit do
-       ~p"/roads/#{@road.id}"
+      if @live_action == :delete do
+        ~p"/"  
       else
-       ~p"/"  
+        ~p"/roads/#{@road.id}" 
       end
     }
     />
