--- a/lib/engweb_web/components/layouts/root.html.heex
+++ b/lib/engweb_web/components/layouts/root.html.heex
@@ -15,7 +15,10 @@
 
 <body class="bg-white antialiased h-full flex flex-col">
   <div class="border-b border-zinc-100 flex items-center justify-between">
-    <.link href={~p"/"} class="text-xl font-bold flex px-8 pt-6 pb-4 sm:px-6 lg:px-8">Mapa das Ruas de Braga</.link>
+    <.link href={~p"/"} class="text-xl font-bold flex px-6 pt-4 pb-4 sm:px-6 lg:px-6">Mapa das Ruas de Braga</.link>
+    <div class="h-18 w-32 flex items-center justify-center">
+      <img src={static_path(@conn, "/images/braga.jpg")} alt="Braga Image" class="h-full w-auto" />
+    </div>
     <ul class="relative z-10 flex gap-4 px-4 pt-6 pb-4 sm:px-6 lg:px-8">
       <%= if @current_user do %>
         <li>
