--- a/lib/engweb_web/live/road_live/index.html.heex
+++ b/lib/engweb_web/live/road_live/index.html.heex
@@ -26,7 +26,7 @@
         <%= if Enum.any?(road.current_image) do %>
           <% current_image = hd(road.current_image) %>
           <div class="absolute top-0 left-0 w-full h-full overflow-hidden">
-            <img src={current_image.image} alt="Current Image" class="object-cover w-full h-full grayscale group-hover:grayscale-0 transform hover:scale-110 transition duration-500 ease-in-out"/>
+            <img src={current_image.image} alt="Current Image" class="object-cover w-full h-full ransform hover:scale-110 transition duration-500 ease-in-out"/>
             <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center p-2">
               <p class="text-lg font-bold"><%= road.name %></p>
             </div>
