--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -91,7 +91,7 @@
 
 <.back navigate={~p"/"}>Return</.back>
 
-<.modal :if={@live_action in [:edit, :delete, :delete_image, :delete_current_image, :new_image, :new_current_image]} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
+<.modal :if={@live_action in [:edit, :delete, :delete_image, :delete_current_image]} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
   <.live_component
     module={EngwebWeb.RoadLive.FormComponent}
     id={
@@ -112,5 +112,17 @@
         ~p"/roads/#{@road.id}" 
       end
     }
+    />
+</.modal>
+
+<.modal :if={@live_action in [:new_image, :new_current_image]} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
+  <.live_component
+    module={EngwebWeb.RoadLive.FormNewImageComponent}
+    id={@road.id}
+    title={@page_title}
+    action={@live_action}
+    road={@road}
+    current_user={@current_user}
+    patch={~p"/roads/#{@road.id}"}
     />
 </.modal>
