refactor: num road => id road

--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -13,7 +13,7 @@
 <% end %>
 
 <.list>
-  <:item title="Road Number"><%= @road.num %></:item>
+  <:item title="Road Number"><%= @road.id %></:item>
   <:item title="Name"><%= @road.name %></:item>
   <:item title="Description"><%= @road.description %></:item>
 </.list>
