--- a/lib/engweb_web/live/road_live/index.html.heex
+++ b/lib/engweb_web/live/road_live/index.html.heex
@@ -13,7 +13,7 @@
   rows={@streams.roads}
   row_click={fn {_id, road} -> JS.navigate(~p"/roads/#{road}") end}
 >
-  <:col :let={{_id, road}} label="Number"><%= road.num %></:col>
+  <:col :let={{_id, road}} label="Number"><%= road.id %></:col>
   <:col :let={{_id, road}} label="Name"><%= road.name %></:col>
   <:col :let={{_id, road}} label="Description"><%= road.description %></:col>
 </.table>
