--- a/lib/engweb_web/live/road_live/index.html.heex
+++ b/lib/engweb_web/live/road_live/index.html.heex
@@ -23,8 +23,8 @@
   <%= for {_, road} <- @streams.roads do %>
     <div class="bg-white rounded-md overflow-hidden cursor-pointer shadow-md" phx-click="navigate_to_road" phx-value-id={road.id}>
       <div class="relative group" style="padding-top: 80%;">
-        <%= if Enum.any?(road.current_image) do %>
-          <% current_image = hd(road.current_image) %>
+        <%= if Enum.any?(road.current_images) do %>
+          <% current_image = hd(road.current_images) %>
           <div class="absolute top-0 left-0 w-full h-full overflow-hidden">
             <img src={current_image.image} alt="Current Image" class="object-cover w-full h-full ransform hover:scale-110 transition duration-500 ease-in-out"/>
             <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center p-2">
