--- a/lib/engweb_web/live/road_live/index.html.heex
+++ b/lib/engweb_web/live/road_live/index.html.heex
@@ -50,3 +50,15 @@
     patch={~p"/"}
   />
 </.modal>
+
+<.modal :if={@live_action == :houses} id="houses-modal" show on_cancel={JS.patch(~p"/")}>
+  <.live_component
+    module={EngwebWeb.RoadLive.FormHouses}
+    id={@road.id || :houses}
+    title={@page_title}
+    action={@live_action}
+    road={@road}
+    current_user={@current_user}
+    patch={~p"/"}
+  />
+</.modal>
